--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CloudConnect - Modern Communication Platform for Developers</title>
-    <meta name="description" content="The friendliest cloud communication platform for developers. Send SMS, voice calls, and video with simple APIs that just work." />
-    <meta name="author" content="CloudConnect" />
-    
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>" type="image/svg+xml">
+    <title>Kapalin Gita Tales</title>
+    <meta name="description" content="Discover premium children's books inspired by Bhagavad Gita, Chanakya Niti, and other timeless Indian wisdom tales. Beautiful stories that nurture young minds with ancient wisdom." />
+    <meta name="author" content="Kapalin Gita Tales" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="CloudConnect - Modern Communication Platform" />
-    <meta property="og:description" content="The friendliest cloud communication platform for developers" />
+    <meta property="og:title" content="Kapalin Gita Tales - Ancient Wisdom for Young Minds" />
+    <meta property="og:description" content="Premium children's books inspired by Bhagavad Gita and timeless Indian wisdom tales" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@cloudconnect" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@kapalingitales" />
   </head>
 
   <body>
