--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>" type="image/svg+xml">
-    <title>Kapalin Gita Tales</title>
-    <meta name="description" content="Discover premium children's books inspired by Bhagavad Gita, Chanakya Niti, and other timeless Indian wisdom tales. Beautiful stories that nurture young minds with ancient wisdom." />
-    <meta name="author" content="Kapalin Gita Tales" />
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>"
+    type="image/svg+xml">
+  <title>Kapalin Gita Tales</title>
+  <meta name="description"
+    content="Discover premium children's books inspired by Bhagavad Gita, Chanakya Niti, and other timeless Indian wisdom tales. Beautiful stories that nurture young minds with ancient wisdom." />
+  <meta name="author" content="Kapalin Gita Tales" />
 
-    <meta property="og:title" content="Kapalin Gita Tales - Ancient Wisdom for Young Minds" />
-    <meta property="og:description" content="Premium children's books inspired by Bhagavad Gita and timeless Indian wisdom tales" />
-    <meta property="og:type" content="website" />
-    
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@kapalingitales" />
-  </head>
+  <meta property="og:title" content="Kapalin Gita Tales - Ancient Wisdom for Young Minds" />
+  <meta property="og:description"
+    content="Premium children's books inspired by Bhagavad Gita and timeless Indian wisdom tales" />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@kapalingitales" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
