change the logo

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>"
-    type="image/svg+xml">
+  <link rel="icon" href="/logo.jpg" type="image/jpeg">
   <title>Kapalin Gita Tales</title>
   <meta name="description"
     content="Discover premium children's books inspired by Bhagavad Gita, Chanakya Niti, and other timeless Indian wisdom tales. Beautiful stories that nurture young minds with ancient wisdom." />
